# async-runtimes-benchmarks

./: RESULT.md  RESULT_2025.md  RESULT_old.md  index.html  take1.html  take2.html
dotnet/: Program.cs  README.md  dotnet.csproj
elixir/: main.exs
go/: main.go
java/: VirtualThreads.java
kotlin/: main.kt
nodejs/: main.js
python/: README.md  main.py  requirements.txt
python_pypy/: README.md  main.py  requirements.txt
rust_async_std/src/: main.rs
rust_futures/: Cargo.toml
rust_futures/src/: main.rs
rust_optimized/: Cargo.toml  README.md
rust_optimized/src/: main.rs
rust_tokio/: Cargo.toml
rust_tokio/src/: main.rs
