[package]
name = "async-tasks-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mimalloc = "0.1.39"  # High-performance memory allocator